--- a/style.css
+++ b/style.css
@@ -6,10 +6,24 @@ body {
   align-items: center;
   overflow: hidden;
 }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .container {
   position: relative;
   display: flex;
   justify-content: center;
+}
+.timer-wrapper {
+  position: absolute;
+  top: 140px;
+  left: 150px;
+}
+.timer-wrapper .timer {
+  font-size: 2em;
+  font-weight: 600;
 }
 #bg img {
   box-shadow: 5px 5px 12px rgba(0, 0, 0, 0.6);
@@ -54,11 +68,20 @@ body {
   height: 48px;
   background-image: url(images/enemy.png);
 }
+.enemy-wrapper {
+  width: 150px;
+  height: 150px;
+  background-color: rgba(255, 10, 50, 0.4);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .enemy-space {
   z-index: 10;
-  width: 200px;
-  height: 200px;
-  background-color: rgba(255, 10, 50, 0.5);
+  width: 300px;
+  height: 300px;
+  background-color: rgba(255, 10, 50, 0.2);
   box-shadow: 3px 10px 15px rgba(0, 0, 0, 0.7);
   position: absolute;
   bottom: 300px;
