--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: ivory;
 }
 * {
   margin: 0;
@@ -25,7 +25,23 @@ body {
 .timer-wrapper .timer {
   font-size: 2em;
   font-weight: 600;
-  color: #fff;
+  color: rgba(0, 0, 0, 0.8);
+}
+.restart-btn {
+  position: absolute;
+  font-size: 1.2em;
+  top: -50px;
+  left: 40px;
+  width: 120px;
+  height: 40px;
+  border-radius: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  box-shadow: 1px 3px 8px rgba(0, 0, 0, 0.8);
+  background-color: ivory;
+  color: rgba(0, 0, 0, 0.8);
+  font-weight: 600;
+  display: none;
+  outline: none;
 }
 #bg img {
   box-shadow: 5px 5px 12px rgba(0, 0, 0, 0.6);
