--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body {
   font-weight: 600;
   display: none;
   outline: none;
+  transition: 0.3s ease-in-out;
 }
 #bg img {
   box-shadow: 5px 5px 12px rgba(0, 0, 0, 0.6);
